...
            description={
              settings.timezone === "auto" ? undefined : settings.timezone
            }
            left={renderTimezoneIcon}
            right={renderChevron}
            onPress={() => navigation.navigate("SettingsTimezone")}
            testID="settings-timezone-item"
          />
        </List.Section>

        <Divider />

        <List.Section>
...
